# aeon

./: .gitignore  Cargo.toml  LICENSE  README.md  README_zh-CN.md  build.rs
.cargo/: config.toml
aeon-client/: Cargo.toml
aeon-client/src/: client.rs  error.rs
aeon-protocol-macro/: Cargo.toml
bifrost-client/: Cargo.toml
bifrost-client/src/: builder.rs  client.rs  config.rs  consumer.rs  error.rs  lib.rs  producer.rs
bifrost-protocol-macro/: Cargo.toml
bifrost-protocol-macro/src/: lib.rs
config/: default.yaml
examples/: client.rs  consumer.rs  produce_and_fetch.rs
proto/raft/: common.proto  data.proto  meta.proto  raft.proto
scripts/: inspect_segment.py  test_raft.sh
src/: config.rs  lib.rs  main.rs
src/broker/: consumer_group.rs  coordinator.rs  mod.rs  partition.rs  topic.rs
src/broker/assignment/: mod.rs  round_robin.rs
src/common/: message.rs  metadata.rs  mod.rs
src/config/: broker.rs  log.rs  mod.rs  server.rs  storage.rs
src/coordinator/: mod.rs
src/coordinator/group/: group.rs  member.rs  mod.rs  state.rs
src/error/: consumer.rs  mod.rs  protocol.rs  server.rs  storage.rs
src/kafka/: codec.rs  message.rs  mod.rs  offsets.rs  request.rs  response.rs
src/kafka/errors/: mod.rs
src/kafka/protocol/: mod.rs
src/monitoring/: metrics.rs  mod.rs  tracing.rs
src/protocol/: ack.rs  codec.rs  commands.rs  message.rs  mod.rs  request.rs  response.rs
src/raft/: README.md  adapter.rs  generic.rs  manager.rs  mod.rs  rpc.rs  server.rs  transport.rs  types.rs
src/raft/core/: manager.rs  mod.rs  transport.rs
src/raft/fsm/: data_fsm.rs  meta_fsm.rs  mod.rs
src/raft/proto/: raft.proto
src/raft/storage/: hard_state.rs  memory.rs  mod.rs  snapshot.rs  wal.rs
src/server/: codec.rs  connection.rs  consumer_ack.rs  handler.rs  mod.rs  producer_ack.rs
src/storage/: api.rs  factory.rs  log.rs  mod.rs
src/storage/log/: mod.rs  segment.rs
src/storage/log/mmap/: mod.rs  segment.rs
src/utils/: hash.rs
tests/: basic_flow.rs  broker_meta_raft_test.rs  protocol_encoding_test.rs  raft_basic_test.rs  raft_engine_test.rs
