[package]
name = "aeon"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "aeon"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.0"
futures = "0.3"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
dashmap = "5.5"
crossbeam-channel = "0.5"
memmap2 = "0.5"
bincode = "1.3"
anyhow = "1.0.82"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
serde_yaml = "0.9"
humantime-serde = "1.1" 
crc = "3.0.0"
crc32fast = "1.3"
flate2 = "1.0"
varuint = "0.7.1"
aeon-protocol-macro = { path = "aeon-protocol-macro" }

[dev-dependencies]
rdkafka = { version = "0.38.0", features = ["dynamic_linking"] }
tempfile = "3.10.1"
anyhow = "1.0.86"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
heck = "0.4"
