[package]
name = "aeon-client"
version = "0.1.0"
edition = "2021"
description = "Aeon message queue client library"

[dependencies]
aeon = { path = ".." }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.5"
bincode = "1.3"
uuid = { version = "1.7", features = ["v4"] }
chrono = "0.4"
tokio-util = { version = "0.7", features = ["codec"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
rand = "0.8"
